maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value random3
	var x:Int=random3()
                  ^