maze.lessons.maze.island.IslandMaze.scala.code
override def run() {

while(!estSurBiscuit()){
	var x:Int=random3()
x match {
	case 0 => if(!estFaceMur){avance()}

	case 2=> droite();droite()
	case 1 => gauche();if(!estFaceMur){avance}
}
}
prendBiscuit()
}
